--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sandhya-blog",
+  "name": "sandhya-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
     "remark-gfm": "^4.0.0"
