--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^3.3.1",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
