--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "react/no-unescaped-entities": "off"
+  },
+  "parserOptions": {
+    "project": "./tsconfig.json"
   }
 } 
